--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Simon Says Game</h1>
 	<h3></h3>
-	<h2>Press any key to satart the game</h2>
+	<h2>Press start button to satart the game</h2>
      
 	<div class="btn-container">
 		<div class="line-one">
